submenu css fixx

--- a/style/main.css
+++ b/style/main.css
@@ -835,7 +835,7 @@ body {
     padding: 8px 0px;
   }
   ._mobile .header .header__container .menu__body .menu__list li .menu__sub-list {
-    width: auto;
+    width: 100%;
   }
   ._mobile .menu__arrow {
     top: 10px;
