--- a/style/main.less
+++ b/style/main.less
@@ -1190,7 +1190,7 @@ body .footer__container .paragraph__section{
         padding: 8px 0px;
     }
     ._mobile .header .header__container .menu__body .menu__list li .menu__sub-list {
-        width: auto;
+        width: 100%;
         
     }
     ._mobile .menu__arrow{
