.header .header__container .menu__body .menu__list .mega-menu_section .menu__sub-list .sub-list__li-tag{         display: block;         width: 100%;         border-right: none;         border-bottom: none;        }

--- a/style/main.css
+++ b/style/main.css
@@ -680,6 +680,7 @@ body {
     display: block;
     width: 100%;
     border-right: none;
+    border-bottom: none;
   }
   .header .header__container .menu__body .menu__list li .menu__sub-list {
     width: 100%;
