--- a/style/main.less
+++ b/style/main.less
@@ -980,6 +980,7 @@ body {
         display: block;
         width: 100%;
         border-right: none;
+        border-bottom: none;
        }
        .header .header__container .menu__body .menu__list li .menu__sub-list{
         width: 100%;
@@ -1020,7 +1021,10 @@ body .header .header__container .menu__body .menu__list li .menu__sub-list{
 }
 .header .header__container .menu__body .menu__list li .menu__sub-list li .menu__sub-link{
     color: white;
-}
+}   
+
+
+
 body .header .header__container .menu__body .menu__list > li._active .menu__sub-list{   
     display: block;
 }
