header.inverted{         transition: .3s all;     }

--- a/style/main.less
+++ b/style/main.less
@@ -984,7 +984,6 @@ body {
        }
        .header .header__container .menu__body .menu__list li .menu__sub-list{
         width: 100%;
-        
         min-width: auto;
        }
 
@@ -1218,6 +1217,10 @@ body .footer__container .paragraph__section{
         border-bottom: 1px solid rgba(255, 255, 255, 0.06);
         display: block;
         line-height: 30px;
+    }
+
+    header.inverted{
+        transition: .3s all;
     }
     
 }
