--- a/style/main.css
+++ b/style/main.css
@@ -342,9 +342,9 @@ body {
   margin-top: 1em;
 }
 .container .content p {
-  font-size: 1.6em;
+  font-size: 22px;
   width: 50%;
-  margin: 0 auto;
+  margin: 20px auto;
 }
 .deer {
   clip-path: url(#deermask);
@@ -417,41 +417,99 @@ body {
     transform: translateY(0px) rotate(120deg);
   }
 }
-.grid__section {
-  background: #EDE4E0;
-  padding: 2em;
+.grid__container {
+  background: #f1efe9;
+  margin: 40px 40px 40px 40px;
+  padding: 16px;
   display: grid;
   grid-template-areas: "one header header" "one three content" "two three content";
-  gap: 1em;
-  grid-template-columns: repeat(2, 1fr) 1fr;
-  grid-template-rows: auto 1fr 78px ;
+  gap: 16px;
+  grid-template-columns: repeat(2, 1fr) 2fr;
+  grid-template-rows: auto 1fr 100px;
+  position: relative;
 }
-.deerimg {
+.grid__container img {
+  z-index: 2;
+}
+.grid__container::after {
+  position: absolute;
+  content: 'wow';
+  font-weight: 800;
+  z-index: 1;
+  font-size: 200px;
+  top: -59px;
+  color: #d500008c;
+  opacity: 0.99;
+  margin-left: 54px;
+}
+.grid__container::before {
+  position: absolute;
+  content: 'wow';
+  font-weight: 800;
+  z-index: -1;
+  font-size: 200px;
+  top: -117px;
+  margin-left: -32px;
+}
+.grid__container img {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   aspect-ratio: 1/1;
 }
-.one {
-  height: 100%;
-  width: 100%;
-  grid-area: one;
-}
-.two {
-  height: 100%;
-  width: 100%;
-  grid-area: two;
-}
-.three {
-  height: 100%;
-  width: 100%;
+.grid__container .three {
   grid-area: three;
 }
-.content {
-  grid-area: content;
+.grid__container .one {
+  grid-area: one;
 }
-.h1 {
+.grid__container .two {
+  grid-area: two;
+}
+.grid__container h1 {
   grid-area: header;
+  font-size: 42px;
+  margin: 0;
+  text-transform: uppercase;
+  font-weight: 300;
+  line-height: 34px;
+}
+.grid__container .content {
+  width: 195px;
+  grid-area: content;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+.grid__container p {
   font-size: 21px;
-  font-weight: 600;
+  text-transform: uppercase;
+  margin: 0;
+}
+.grid__container a {
+  font-size: 12px;
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  gap: 1em;
+  text-decoration: none;
+  color: black;
+}
+.grid__container a span {
+  position: relative;
+}
+.grid__container a span::before {
+  content: '';
+  width: 35px;
+  margin-left: 32px;
+  margin-top: -4px;
+  height: 20px;
+  background-color: rgba(238, 10, 10, 0.555);
+  position: absolute;
+}
+.grid__container .svg__arrow {
+  width: 116px;
+  height: 40px;
 }
 :root {
   --main-radius: 5px;
@@ -859,5 +917,32 @@ body {
   }
   header.inverted {
     transition: 0.3s all;
+  }
+  .grid__container {
+    padding: 10px;
+    gap: 10px;
+    margin: 20px 20px 20px 20px;
+  }
+  .grid__container::before {
+    font-size: 100px;
+    top: -56px;
+    margin-left: -18px;
+  }
+  .grid__container::after {
+    font-size: 150px;
+    top: -43px;
+    margin-left: 24px;
+  }
+  .grid__container h1 {
+    font-size: 31px;
+  }
+  .grid__container .content p {
+    font-size: 18px;
+  }
+  .grid__container .content a {
+    margin-top: 60px;
+  }
+  .grid__container .content a svg {
+    width: 99px;
   }
 }
