--- a/style/main.less
+++ b/style/main.less
@@ -482,9 +482,10 @@ body {
 
         
         p{
-            font-size: 1.6em;
+            
+            font-size: 22px;
             width: 50%;
-            margin: 0 auto;
+            margin: 20px auto;
 
         }
     }
@@ -577,61 +578,134 @@ body {
 
 /////////////////////.grid__section{////////////////////////////////////////////
 
-.grid__section{
-    background: @7;
-    
-    
-    padding: 2em;
+   
 
-    display: grid;
-    grid-template-areas: 
-         "one header header"
-         "one three content"
+    
+   
+
+        .grid__container{
+          background: #f1efe9;
+          margin: 40px 40px 40px 40px;
+          
+          padding: 16px;
+          display: grid;
+          grid-template-areas: 
+               "one header header"
+               "one three content"
+               "two three content";
+        
+          gap: 16px;
+          grid-template-columns: repeat(2, 1fr) 2fr;
+          grid-template-rows: auto 1fr 100px;
+          position: relative;
+          img{
+              z-index: 2;
+          }
+          &::after {
+            position: absolute;
+            content: 'wow';
+            font-weight: 800;
+            z-index: 1;
+            font-size: 200px;
+            top: -59px;
+            color: #d500008c;
+            opacity: 0.99;
+            margin-left: 54px;
+          }
+          &::before{
+              position: absolute;
+              content: 'wow';
+              font-weight: 800;
+              z-index: -1;
+              font-size: 200px;
+              top: -117px;
+              margin-left: -32px;
+        }
+          
+          img{
+              
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+              aspect-ratio: 1/1;
+          }
+          .three{
+              grid-area: three;
+      
+          }
+          .one{
+              
+              grid-area: one;
+      
+          }
+          .two{
+              
+              grid-area: two;
+      
+          }
+          h1{
+             
+          grid-area: header;
+          font-size: 42px;
+          margin: 0;
+          text-transform: uppercase;
+          font-weight: 300;
+          line-height: 34px;
+      
+          }
+          
+          .content{
+            width: 195px;
+            grid-area: content;
+            display: flex;
+            justify-content: space-between;
+            flex-direction: column;
+          }
+              p{
+                  
+                  font-size: 21px;
+                  text-transform: uppercase;
+                  margin: 0;
+                }
+              a{
+                  
+                font-size: 12px;
+                text-transform: uppercase;
+                display: flex;
+                align-items: center;
+                gap: 1em;
+                text-decoration: none;
+                color: black;
+                span{
+                    position: relative;
+                    &::before{
+                        content: '';
+                        width: 35px;
+                        margin-left: 32px;
+                        margin-top: -4px;
+                        height: 20px;
+                        background-color: rgba(238, 10, 10, 0.555);
+                        position: absolute;
+                    }
+                    
+                }
+                  
+              }
+                  
+                  .svg__arrow{
+                      
+                    width: 116px;
+                    height: 40px;
+      
+                  }
+      
+                 
+              }
+      
+          
+          
          
-         "two three content";
-    gap: 1em;
-
-
-    grid-template-columns: repeat(2, 1fr) 1fr;
-    grid-template-rows: auto 1fr 78px ;
-}
-
-
-
-
-
-
-
-.deerimg{
-    
-    object-fit: cover;
-    aspect-ratio: 1/1;
-}
-
-.one{
-    height: 100%;
-    width: 100%;
-    grid-area: one;
-}
-.two{
-    height: 100%;
-    width: 100%;
-    grid-area: two;
-}
-.three{
-    height: 100%;
-    width: 100%;
-    grid-area: three;
-}
-.content{
-    
-    grid-area: content;
-}
-.h1{
-    grid-area: header;
-    font-size: 21px;
-    font-weight: 600;
-}
+      
 /////////////////////////////////////////////////////////////footer start////////////////////////////////////////////////////////////
 //////////////////////////////////////grid//////////////////////////
 /////////////////////////////////////////////////////////////footer start////////////////////////////////////////////////////////////
@@ -1222,7 +1296,45 @@ body .footer__container .paragraph__section{
     header.inverted{
         transition: .3s all;
     }
-    
+    /////////////////////////////////////.grid__container mobile less///////////////////////////////////////
+    .grid__container{
+        padding: 10px;
+        gap: 10px;
+        margin: 20px 20px 20px 20px;
+        &::before{
+            font-size: 100px;
+            top: -56px;
+            margin-left: -18px
+        }
+        &::after{
+            font-size: 150px;
+            top: -43px;
+            margin-left: 24px;
+        }
+        h1{
+            font-size: 31px;
+        }
+        .content{
+            p{
+                font-size: 18px;
+            }
+            a{
+                margin-top: 60px;
+                svg{
+                    width: 99px;
+                }
+            }
+
+        }
+    }
+
+
+
+
+
+////////////////////////////////////.grid__container mobile less////////////////////////////////////////
+
+
 }
 
 
