grid__section csss

--- a/style/main.css
+++ b/style/main.css
@@ -419,7 +419,7 @@ body {
 }
 .grid__container {
   background: #f1efe9;
-  margin: 40px 40px 40px 40px;
+  margin: 40px 0px 0px 0px;
   padding: 16px;
   display: grid;
   grid-template-areas: "one header header" "one three content" "two three content";
@@ -437,7 +437,7 @@ body {
   font-weight: 800;
   z-index: 1;
   font-size: 200px;
-  top: -59px;
+  top: -61px;
   color: #d500008c;
   opacity: 0.99;
   margin-left: 54px;
@@ -449,7 +449,7 @@ body {
   z-index: -1;
   font-size: 200px;
   top: -117px;
-  margin-left: -32px;
+  margin-left: 4px;
 }
 .grid__container img {
   width: 100%;
@@ -467,9 +467,9 @@ body {
   grid-area: two;
 }
 .grid__container h1 {
+  margin-top: -3px;
   grid-area: header;
   font-size: 42px;
-  margin: 0;
   text-transform: uppercase;
   font-weight: 300;
   line-height: 34px;
@@ -482,9 +482,8 @@ body {
   flex-direction: column;
 }
 .grid__container p {
-  font-size: 21px;
-  text-transform: uppercase;
-  margin: 0;
+  font-size: 22px;
+  margin-top: -3px;
 }
 .grid__container a {
   font-size: 12px;
@@ -919,30 +918,35 @@ body {
     transition: 0.3s all;
   }
   .grid__container {
-    padding: 10px;
+    grid-template-rows: auto 1fr 89px;
     gap: 10px;
-    margin: 20px 20px 20px 20px;
+    margin: 30px 0px 0px 0px;
   }
   .grid__container::before {
     font-size: 100px;
-    top: -56px;
-    margin-left: -18px;
+    top: -69px;
+    margin-left: 6px;
   }
   .grid__container::after {
     font-size: 150px;
     top: -43px;
-    margin-left: 24px;
+    margin-left: 40px;
   }
   .grid__container h1 {
+    margin-top: -6px;
     font-size: 31px;
   }
   .grid__container .content p {
-    font-size: 18px;
+    font-size: 17px;
   }
   .grid__container .content a {
-    margin-top: 60px;
+    margin-top: 80px;
   }
-  .grid__container .content a svg {
+  .grid__container .content a .svg__arrow {
     width: 99px;
+    margin-bottom: -13px;
+  }
+  .grid__container .content a span {
+    margin-top: 22px;
   }
 }
