--- a/style/main.css
+++ b/style/main.css
@@ -579,6 +579,42 @@ body {
 .header .header__container .menu__body .menu__list li .menu__sub-list li .menu__sub-link:hover {
   color: white;
 }
+.main__container {
+  margin-top: 30px;
+}
+.main__container .reveal__section .reveal__container {
+  width: 1800px;
+  margin: 0 auto;
+}
+.main__container .reveal__section .reveal__container .reveal__box {
+  height: 500px;
+  width: 100%;
+  background: #393E46;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.main__container .reveal__section .reveal__container .reveal__box .reveal__div {
+  z-index: 1;
+  margin-right: 30px;
+  box-shadow: 0 0 8px #000000;
+  opacity: 0;
+  transform: translate(0px, 120%);
+  transition: all 0.8s ease 0s;
+  width: 300px;
+  height: 340px;
+  background: #251B37;
+  border: 2px solid #00ADB5;
+}
+.main__container .reveal__section .reveal__container .reveal__box .reveal__div:last-child {
+  margin: 0;
+}
+.main__container .reveal__section .reveal__container .reveal__box .reveal__div.element-show {
+  opacity: 1;
+  transform: translate(0px, 0px);
+}
 .elements__section-grid {
   height: 1000px;
   /* You must set a specified height */
