--- a/style/main.css
+++ b/style/main.css
@@ -581,10 +581,21 @@ body {
 }
 .main__container {
   margin-top: 30px;
+  margin-bottom: 30px;
 }
-.main__container .reveal__section .reveal__container {
+.main__container .reveal__section {
   width: 1800px;
   margin: 0 auto;
+}
+.main__container .reveal__section .reveal__container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+.main__container .reveal__section .reveal__container h1 {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 .main__container .reveal__section .reveal__container .reveal__box {
   height: 500px;
@@ -594,14 +605,12 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  position: relative;
 }
 .main__container .reveal__section .reveal__container .reveal__box .reveal__div {
-  z-index: 1;
   margin-right: 30px;
   box-shadow: 0 0 8px #000000;
   opacity: 0;
-  transform: translate(0px, 120%);
+  transform: translate(0, 120%);
   transition: all 0.8s ease 0s;
   width: 300px;
   height: 340px;
@@ -614,6 +623,44 @@ body {
 .main__container .reveal__section .reveal__container .reveal__box .reveal__div.element-show {
   opacity: 1;
   transform: translate(0px, 0px);
+}
+.loading-lazy__section {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.loading-lazy__section .loading-lazy__container {
+  width: 1800px;
+  margin: 0 auto;
+}
+.loading-lazy__section .loading-lazy__container .loading-lazy__box {
+  position: relative;
+}
+.loading-lazy__section .loading-lazy__container .loading-lazy__box h1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul {
+  height: 500px;
+  width: 100%;
+  background: #393E46;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy__li {
+  background: url(../img/logo.png) center / 50px no-repeat;
+  margin-right: 30px;
+  box-shadow: 0 0 8px #000000;
+  width: 300px;
+  height: 340px;
+  background: #251B37;
+  border: 2px solid #00ADB5;
+}
+.loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy__li img {
+  width: 100%;
+  height: 100%;
 }
 .elements__section-grid {
   height: 1000px;
@@ -882,14 +929,10 @@ body {
   width: 116px;
   height: 40px;
 }
-footer {
-  margin-top: 221px;
-}
 :root {
   --main-radius: 5px;
 }
 .footer__container {
-  margin-top: -218px;
   display: grid;
   height: 100%;
   grid-template-columns: 1fr 0.6fr 1fr 1fr;
