--- a/style/main.less
+++ b/style/main.less
@@ -771,45 +771,39 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
             }
         }
     }
-
+///////////////////////////////////////////////////
+/////////////////////////////////////////////////////
+/////////////////////////////////////////////////////
 .main__container{
     margin-top: 30px;
-    
+    margin-bottom: 30px;
 
     .reveal__section{
-        
+        width: 1800px;
+        margin: 0 auto;
         .reveal__container{
-            width: 1800px;
-            margin: 0 auto;
+            position: relative;
+            display: flex;
+            flex-direction: column;
             
+            h1{
+                position: absolute;
+                top: 0;
+                left: 0;
+            }
             .reveal__box{
                 height: 500px;
                 width: 100%;
-                
                 background: @2;
                 display: flex;
                 flex-direction: row;
                 justify-content: center;
                 align-items: center;
-                position: relative;
-
-
-
-
-
                 .reveal__div{
-
-                    //position: absolute;
-                    //top: 0;
-                    
-                    z-index: 1;
-
-
                     margin-right: 30px;
-                    //animation: move 2s linear alternate;
                     box-shadow: 0 0 8px rgb(0 0 0);
                     opacity: 0;
-                    transform: translate(0px, 120%);
+                    transform: translate(0, 120%);    
                     transition: all 0.8s ease 0s;
                     width: 300px;
                     height: 340px;
@@ -825,43 +819,70 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
     }
 
 }
-//@keyframes move {
-   // 0% {
-   //     top: 600px;
-   // }
-   // 100% {
-   //    top: 0px;
-    //}
-//}
 
-//.reveal__container{
-
-   // div:nth-child(1){
-    //    margin-right: 1215px;
-   // }
-    
-   // div:nth-child(2){
-     //   margin-right: 370px;
-   // }
-    
-   // div:nth-child(3){
-    //    margin-right: -457px;
-   // }
-    //div:nth-child(4){
-    //    margin-right: -1284px;
-   // }
-//}
 
 
 .main__container .reveal__section .reveal__container .reveal__box .reveal__div.element-show {
     opacity: 1;
     transform: translate(0px, 0px);
-    //-webkit-transform: translateY(0);
-    //-ms-transform: translateY(0);
-    //transform: translateY(0);
-   // transition: opacity 1s;
+    
     
 }
+///////////////////////////////////////////////////
+/////////////////////////////////////////////////////
+/////////////////////////////////////////////////////
+
+.loading-lazy__section{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    .loading-lazy__container{
+        width: 1800px;
+        margin: 0 auto;
+        .loading-lazy__box{
+            position: relative;
+            h1{
+                position: absolute;
+                top: 0;
+                left: 0;
+            }
+            .loading-lazy__ul{
+                height: 500px;
+                width: 100%;
+                background: @2;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                .loading-lazy__li{
+                    background: url(../img/logo.png) center / 50px no-repeat ;
+                    margin-right: 30px;
+                    box-shadow: 0 0 8px rgb(0 0 0);
+                    width: 300px;
+                    height: 340px;
+                    background: @6;
+                    border: 2px solid @3;
+                    img{
+                        width: 100%;
+                        height: 100%;
+
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 .elements__section-grid{
     
@@ -1211,9 +1232,7 @@ body {
       
           
           
-     footer{
-        margin-top: 221px;
-     }    
+      
       
 /////////////////////////////////////////////////////////////footer start////////////////////////////////////////////////////////////
 //////////////////////////////////////grid//////////////////////////
@@ -1229,7 +1248,7 @@ body {
 
 
     .footer__container{
-        margin-top: -218px;
+       
         .flex_center{
            display: flex;
            flex-direction: column;
