loading-lazy__section start

--- a/style/main.css
+++ b/style/main.css
@@ -650,13 +650,15 @@ body {
   align-items: center;
 }
 .loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy__li {
-  background: url(../img/logo.png) center / 50px no-repeat;
+  background: url("../img/logo.png") center / 50px no-repeat;
   margin-right: 30px;
   box-shadow: 0 0 8px #000000;
   width: 300px;
   height: 340px;
-  background: #251B37;
   border: 2px solid #00ADB5;
+}
+.loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy__li:last-child {
+  margin: 0;
 }
 .loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy__li img {
   width: 100%;
