--- a/style/main.less
+++ b/style/main.less
@@ -854,13 +854,17 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
                 justify-content: center;
                 align-items: center;
                 .loading-lazy__li{
-                    background: url(../img/logo.png) center / 50px no-repeat ;
+                    background: url("../img/logo.png") center / 50px no-repeat;
                     margin-right: 30px;
                     box-shadow: 0 0 8px rgb(0 0 0);
                     width: 300px;
                     height: 340px;
-                    background: @6;
+                    
                     border: 2px solid @3;
+                    &:last-child{
+                        margin: 0;
+                    }
+
                     img{
                         width: 100%;
                         height: 100%;
