--- a/style/main.css
+++ b/style/main.css
@@ -579,50 +579,9 @@ body {
 .header .header__container .menu__body .menu__list li .menu__sub-list li .menu__sub-link:hover {
   color: white;
 }
-.main__container {
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-.main__container .reveal__section {
-  width: 1800px;
-  margin: 0 auto;
-}
-.main__container .reveal__section .reveal__container {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-}
-.main__container .reveal__section .reveal__container h1 {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-.main__container .reveal__section .reveal__container .reveal__box {
-  height: 500px;
-  width: 100%;
-  background: #393E46;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-.main__container .reveal__section .reveal__container .reveal__box .reveal__div {
-  margin-right: 30px;
-  box-shadow: 0 0 8px #000000;
-  opacity: 0;
-  transform: translate(0, 120%);
-  transition: all 0.8s ease 0s;
-  width: 300px;
-  height: 340px;
-  background: #251B37;
-  border: 2px solid #00ADB5;
-}
-.main__container .reveal__section .reveal__container .reveal__box .reveal__div:last-child {
-  margin: 0;
-}
-.main__container .reveal__section .reveal__container .reveal__box .reveal__div.element-show {
+.loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy__li.element-show {
   opacity: 1;
-  transform: translate(0px, 0px);
+  transform: translateY(0);
 }
 .loading-lazy__section {
   margin-top: 30px;
@@ -656,13 +615,16 @@ body {
   width: 300px;
   height: 340px;
   border: 2px solid #00ADB5;
-}
-.loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy__li:last-child {
-  margin: 0;
+  opacity: 0;
+  transform: translateY(200px);
+  transition: 800ms ;
 }
 .loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy__li img {
   width: 100%;
   height: 100%;
+}
+.loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy__li:last-child {
+  margin: 0;
 }
 .elements__section-grid {
   height: 1000px;
