--- a/style/main.less
+++ b/style/main.less
@@ -778,7 +778,7 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
 .loading-lazy__section .loading-lazy__container .loading-lazy__box .loading-lazy__ul .loading-lazy__li.element-show{
 
     opacity: 1;
-    transform: translateY(0);
+    transform: translateX(0);
     
     
 }
@@ -790,6 +790,8 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
         width: 1800px;
         margin: 0 auto;
         .loading-lazy__box{
+            background: #393E46;
+            padding-top: 35px;
             position: relative;
             h1{
                 position: absolute;
@@ -797,9 +799,9 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
                 left: 0;
             }
             .loading-lazy__ul{
-                height: 500px;
+                height: 367px;
                 width: 100%;
-                background: @2;
+                
                 display: flex;
                 flex-direction: row;
                 justify-content: center;
@@ -812,16 +814,18 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
                     height: 340px;
                     border: 2px solid @3;
                     opacity: 0;
-                    transform: translateY(200px);    
-                    transition: 800ms ;
+                    transform: translateX(100px);    
+                    transition: 1800ms ;
                     img{
-                        
+                  
                         width: 100%;
                         height: 100%;
+                        
                     }
                     &:last-child{
                         margin: 0;
                     }
+                    
 
                    
                 }
