Lazy Loading Images with JavaScript Intersection Observer v.1.0

--- a/style/main.less
+++ b/style/main.less
@@ -21,7 +21,7 @@
 @5: #7D6E83;
 @6: #251B37;
 @7: #EDE4E0;
-
+@8: #5F9DF7;
 html{
     box-sizing: border-box;
 }
@@ -201,7 +201,7 @@ h1{
 
 
 body .inverted {
-    background-color:#dd0000cc;
+    background-color: #5f9cf763;
     box-shadow: 0 3px 5px 0.3px rgba(0,0,0,0.1);
     
   }
