--- a/style/main.less
+++ b/style/main.less
@@ -201,7 +201,7 @@ h1{
 
 
 body .inverted {
-    background-color: #5f9cf763;
+    background-color: #e3fdfd80;
     box-shadow: 0 3px 5px 0.3px rgba(0,0,0,0.1);
     
   }
@@ -790,7 +790,7 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
         width: 1800px;
         margin: 0 auto;
         .loading-lazy__box{
-            background: #393E46;
+            background: #112D4E;
             padding-top: 35px;
             position: relative;
             h1{
