--- a/style/main.less
+++ b/style/main.less
@@ -295,8 +295,9 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
   }
   
   .glitch{
+    margin-top: -75px;
     width: 100vw;
-    height: 106vh;
+    height: 108vh;
     max-width:100%;
     position: relative;
     display: flex;
