--- a/style/main.less
+++ b/style/main.less
@@ -10,6 +10,20 @@
          url('../fonts/roboto-v30-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
          url('../fonts/roboto-v30-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
   }
+  @font-face { src: url("../fonts/assassin.woff2") format("woff2"); font-family: "assassin-st"; font-weight: 700; font-style: italic; }
+
+  :root {
+	--accent: #CC8869;
+	--text: #333;
+	--regular-text: 16px;
+	--lineheight: 1.65;
+	--userfont: roboto-st, sans-serif;
+	--systemfont: -apple-system, BlinkMacSystemFont, Arial, sans-serif;
+	--padding: 120px;
+	--transition: cubic-bezier(.4, 0, 0, 1);
+}
+
+
 
  
 @import "reset.css";
@@ -805,11 +819,23 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
     }
 
     h2{
-        margin: 25px 25px;
+        position: absolute;
         text-align: center;
+        width: 100%;
+        z-index: 1;
+        top: 40px;
+        font-family: assassin-st, sans-serif;
+        font-size: 32px;
+        color: rgba(255, 255, 255, 0.7);
+        span{
+            color: var(--accent);
+        }
     }
     .swiper-slider__wrapper{
-        padding: 50px 50px;
+        position: relative;
+	    z-index: 2;
+	    height: 100%;
+	    padding: var(--padding) 0;
         &::before{
             content: '';
             position: absolute;
@@ -822,6 +848,15 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
             background-repeat: no-repeat; 
             background-size: cover;
             animation: key-glow 1.7s ease-in-out infinite;
+        }
+        .swiper-carousel{
+            width: 100%;
+            height: 100%;
+            .swiper-carousel__item{
+                position: relative;
+                height: calc(100vh - var(--padding)*2);
+                
+            }
         }
     }
     video{
