--- a/style/main.css
+++ b/style/main.css
@@ -661,9 +661,25 @@ body {
   width: 100%;
   height: 100%;
 }
+.swiper-slider .swiper-slider__wrapper .swiper-carousel .swiper-carousel__image-wrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  perspective: 150px;
+  transform-style: preserve-3d;
+}
+.swiper-slider .swiper-slider__wrapper .swiper-carousel .swiper-carousel__image-wrapper .swiper-carousel__image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
 .swiper-slider .swiper-slider__wrapper .swiper-carousel .swiper-carousel__item {
   position: relative;
   height: calc(100vh - var(--padding)*2);
+  text-align: center;
 }
 .swiper-slider video {
   position: absolute;
