--- a/style/main.less
+++ b/style/main.less
@@ -852,10 +852,27 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
         .swiper-carousel{
             width: 100%;
             height: 100%;
+            .swiper-carousel__image-wrapper{
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                perspective: 150px;
+                transform-style: preserve-3d;
+                .swiper-carousel__image{
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    background-size: contain;
+                    background-position: center;
+                    background-repeat: no-repeat;
+                }
+
+
+            }
             .swiper-carousel__item{
                 position: relative;
                 height: calc(100vh - var(--padding)*2);
-                
+                text-align: center;
             }
         }
     }
