--- a/style/main.css
+++ b/style/main.css
@@ -661,6 +661,9 @@ body {
   width: 100%;
   height: 100%;
 }
+.swiper-slider .swiper-slider__wrapper .swiper-carousel .swiper-wrapper .swiper-slide-active {
+  opacity: 1;
+}
 .swiper-slider .swiper-slider__wrapper .swiper-carousel .swiper-carousel__image-wrapper {
   position: absolute;
   width: 100%;
@@ -680,6 +683,7 @@ body {
   position: relative;
   height: calc(100vh - var(--padding)*2);
   text-align: center;
+  opacity: 0.25;
 }
 .swiper-slider video {
   position: absolute;
